--- a/.github/workflows/convert_and_commit.yml
+++ b/.github/workflows/convert_and_commit.yml
@@ -1,6 +1,12 @@
 name: Convert and Commit
 
-on: push
+on:
+    push:
+        branches:
+            - "**"
+
+permissions:
+    contents: write # مهم جداً علشان commit & push
 
 jobs:
     convert-and-commit:
@@ -10,12 +16,10 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
               with:
-                  token: ${{ secrets.PAT }} # Personal Access Token
-                  ref: ${{ github.head_ref }} # Reference (branch/tag) for checkout
-                  fetch-depth: 0 # Fetch entire commit history
+                  fetch-depth: 0
 
             - name: Set up Python
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: "3.x"
 
@@ -25,9 +29,10 @@ jobs:
 
             - name: Run conversion scripts
               run: |
-                  bash scripts/convert_all.sh  # Run conversion script
+                  bash scripts/convert_all.sh
 
-            - uses: stefanzweifel/git-auto-commit-action@v5
+            - name: Auto commit changes
+              uses: stefanzweifel/git-auto-commit-action@v5
               with:
                   commit_message: "Automated conversion of files [skip ci]" # Commit message with skip CI tag
                   commit_user_name: "github-actions[bot]"
